# esp32s3-gnss-base-station

./: .gitignore  README.md
firmware/: .clang-format  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/data/: bootstrap.bundle.min.js.crc  bootstrap.min.css.crc  favicon.ico.crc  index.html  index.html.crc  jquery-3.7.0.min.js.crc
firmware/main/: CMakeLists.txt  battery.c  battery.h  config.c  config.h  idf_component.yml  main.c  ntrip_caster.c  ntrip_caster.h  ntrip_client.c  ntrip_client.h  ping.c  ping.h  status.c  status.h  uart.c  uart.h  ublox.c  ublox.h  util.h  web_app.c  web_app.h  wifi.c  wifi.h
firmware/scripts/: gen_data_crc32.py  server_dev.py
hardware/: esp32s3-gnss-base-station.kicad_pcb  esp32s3-gnss-base-station.kicad_prl  esp32s3-gnss-base-station.kicad_pro  esp32s3-gnss-base-station.kicad_sch  fp-lib-table  sym-lib-table
hardware/jlcpcb/: project.db
hardware/jlcpcb/gerber/: esp32s3-gnss-base-station-CuBottom.gbr  esp32s3-gnss-base-station-CuIn1.gbr  esp32s3-gnss-base-station-CuIn2.gbr  esp32s3-gnss-base-station-CuTop.gbr  esp32s3-gnss-base-station-EdgeCuts.gbr  esp32s3-gnss-base-station-MaskBottom.gbr  esp32s3-gnss-base-station-MaskTop.gbr  esp32s3-gnss-base-station-NPTH.drl  esp32s3-gnss-base-station-PTH.drl  esp32s3-gnss-base-station-SilkBottom.gbr  esp32s3-gnss-base-station-SilkTop.gbr
hardware/jlcpcb/production_files/: BOM-esp32s3-gnss-base-station.csv  CPL-esp32s3-gnss-base-station.csv
hardware/libs/: LCSC.kicad_sym
hardware/libs/LCSC.3dshapes/: CONN-TH_PH2.00-LI-2P.wrl  IND-SMD_L4.0-W4.0-H1.9.wrl  (+7 more)
(+22 files in other folders)
